# ChangeLog for xfce-extra/xfce4-radio
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-radio/ChangeLog,v 1.3 2007/03/10 10:24:24 welp Exp $

  10 Mar 2007; Peter Weller <welp@gentoo.org> xfce4-radio-0.2.0.ebuild:
  Keyworded on amd64 wrt bug 169987

  09 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  xfce4-radio-0.2.0.ebuild:
  stable x86; bug #169987

*xfce4-radio-0.2.0 (27 Feb 2007)

  27 Feb 2007; Samuli Suominen <drac@gentoo.org>
  +files/xfce4-radio-0.2.0-asneeded.patch, +metadata.xml,
  +xfce4-radio-0.2.0.ebuild:
  Initial commit for bug 168358.
