@@ -3,14 +3,19 @@ MD5 5e2201c67bf9c67be1d5caa11c6f4bc6 files/xfce4-radio-0.2.0-asneeded.patch 521
 RMD160 a6819b3c6365641cc424e6f3a8c97b98f7cc20ce files/xfce4-radio-0.2.0-asneeded.patch 521
 SHA256 daa784b38fb173151504ee39afe69e8ef7e047615f01d387435d9efe2bdaa8f1 files/xfce4-radio-0.2.0-asneeded.patch 521
 DIST xfce4-radio-plugin-0.2.0.tar.gz 142093 RMD160 5143e077d179b138c2ab90e786976e067b4d9689 SHA1 74ec7311aa3ac97f3ef4cada6a2cff22317239e5 SHA256 d6df9fc500cac7a64338dad095045456e0650d0f0848ce65e729bdac091bde63
+DIST xfce4-radio-plugin-0.2.1.tar.gz 156876 RMD160 9a969602c8cd36fb801283c4cdd1b1a4b843847c SHA1 32fb2693e3620fbee6db08073b952186a940d4ee SHA256 d28c47a7903fa7533704393718ce1e17ba49ec74e4ecd9c25f628c4386c96584
 EBUILD xfce4-radio-0.2.0.ebuild 684 RMD160 77281754c5b4bc5a0a3d9a269721cfc6a54f779f SHA1 8034acff6c13a33499eebda3aef476625fdb1bd7 SHA256 8b2482657d097d52b0814761e6181dd450afa83a017c5bc0ce11d17b0c052556
 MD5 81c8e9bfe5ae13da2ad8a068164585eb xfce4-radio-0.2.0.ebuild 684
 RMD160 77281754c5b4bc5a0a3d9a269721cfc6a54f779f xfce4-radio-0.2.0.ebuild 684
 SHA256 8b2482657d097d52b0814761e6181dd450afa83a017c5bc0ce11d17b0c052556 xfce4-radio-0.2.0.ebuild 684
-MISC ChangeLog 638 RMD160 48124e90d693ad07c9305094f7b9f9363fab7690 SHA1 23762c669ba437f3eb6b2e0f5b78e346179ca97d SHA256 3de070009937220e217069b1e5160c307555c19efa1ad6dbdb5e0e3380584ded
-MD5 f13d7d08335dea5b036042fa450f5382 ChangeLog 638
-RMD160 48124e90d693ad07c9305094f7b9f9363fab7690 ChangeLog 638
-SHA256 3de070009937220e217069b1e5160c307555c19efa1ad6dbdb5e0e3380584ded ChangeLog 638
+EBUILD xfce4-radio-0.2.1.ebuild 473 RMD160 1bed7fa911b887b0fd9fcd127046c5ec4fc133cc SHA1 78f66a1d8cb911b482cc0a8ab0971a0827f24d5f SHA256 c346441611d956ac4de9fa66b4ab6bb6fe412347deb9daa662e780f40733ad3c
+MD5 d7910d616fa918a38c607f21da03a395 xfce4-radio-0.2.1.ebuild 473
+RMD160 1bed7fa911b887b0fd9fcd127046c5ec4fc133cc xfce4-radio-0.2.1.ebuild 473
+SHA256 c346441611d956ac4de9fa66b4ab6bb6fe412347deb9daa662e780f40733ad3c xfce4-radio-0.2.1.ebuild 473
+MISC ChangeLog 765 RMD160 19ee829cb99047ae54956bbafd9eaca4cdcd05e7 SHA1 c63958655ffdc1e7bbfd59ecb4a765e5f2318e1a SHA256 cac84138ae7c9f358f77a4a027d3f5eaeb72baf2a540fdae670dfdc39b27a896
+MD5 b89261cad441746336f0a4dbc4c9490c ChangeLog 765
+RMD160 19ee829cb99047ae54956bbafd9eaca4cdcd05e7 ChangeLog 765
+SHA256 cac84138ae7c9f358f77a4a027d3f5eaeb72baf2a540fdae670dfdc39b27a896 ChangeLog 765
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
@@ -18,3 +23,6 @@ SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61 metadata
 MD5 ed78df141889d1c8573798407858aa7a files/digest-xfce4-radio-0.2.0 274
 RMD160 83588bdcc450b3e362f81c66c15eec604e3b8738 files/digest-xfce4-radio-0.2.0 274
 SHA256 038c254ca0befcd0d699161fc5e3a7fcd59d4faa166be2f7ef35487b3cf1e849 files/digest-xfce4-radio-0.2.0 274
+MD5 40c3fe0881f70c32a9d9be731f396e14 files/digest-xfce4-radio-0.2.1 274
+RMD160 401528018492ae8b0fcfc3d09186e946e211445c files/digest-xfce4-radio-0.2.1 274
+SHA256 0dd5c5c8429ef2ee21d09a0a73a0bf4d5cb2a0c29fc574c3cf0b423bb30466d3 files/digest-xfce4-radio-0.2.1 274
