@@ -1,0 +1,3 @@
+MD5 1df138153be0c70757df5a16f018a486 xfce4-radio-plugin-0.2.1.tar.gz 156876
+RMD160 9a969602c8cd36fb801283c4cdd1b1a4b843847c xfce4-radio-plugin-0.2.1.tar.gz 156876
+SHA256 d28c47a7903fa7533704393718ce1e17ba49ec74e4ecd9c25f628c4386c96584 xfce4-radio-plugin-0.2.1.tar.gz 156876
