@@ -1,6 +1,11 @@
 # ChangeLog for xfce-extra/xfce4-radio
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-radio/ChangeLog,v 1.3 2007/03/10 10:24:24 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-radio/ChangeLog,v 1.4 2007/06/15 15:11:09 drac Exp $
+
+*xfce4-radio-0.2.1 (15 Jun 2007)
+
+  15 Jun 2007; Samuli Suominen <drac@gentoo.org> +xfce4-radio-0.2.1.ebuild:
+  Version bump.
 
   10 Mar 2007; Peter Weller <welp@gentoo.org> xfce4-radio-0.2.0.ebuild:
   Keyworded on amd64 wrt bug 169987
